# hetzner-snap-and-rotate

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  inactive-issues.yml  publish.yml  pypi-publish.yml
resources/: config-example.json
src/hetzner_snap_and_rotate/: __main__.py  api.py  config.py  logger.py  periods.py  servers.py  snapshots.py
tests/: test_api.py  test_config.py  test_logger.py  test_main.py  test_periods.py
tests/config/: no-snapshot-name.json  regular.json  without-default.json
